testdata/invalid/invalid_const_opcode.bop
[opcode("test")]
const string p = "string";